--- a/extentions/css/style.css
+++ b/extentions/css/style.css
@@ -1,4 +1,25 @@
 @charset "UTF-8";
+.btn-secondary, .btn-primary {
+  border-radius: 15px;
+  color: #fff;
+  padding: 14px 20px;
+  display: inline-block;
+}
+.btn-secondary:hover, .btn-primary:hover {
+  color: #fff;
+  background-color: black;
+}
+
+.btn-primary {
+  background-color: red;
+  border: 2px solid green;
+}
+
+.btn-secondary {
+  background-color: blue;
+  border: 2px solid orange;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -28,7 +49,7 @@ header p {
 }
 
 .main-header {
-  height: 60vh;
+  height: 20vh;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
